# sanctum-crucible

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  run_pipeline.py
configs/: finetune.yaml  finetune_multiturn.yaml  models.yaml  pair.yaml
scripts/: 01_run_baseline.sh  02_run_finetune.sh  03_run_evaluation.sh  download_models.sh  setup_runpod.sh
src/crucible/: __init__.py
src/crucible/data/: __init__.py  advbench.py  garak_loader.py  harmbench.py
src/crucible/evaluate/: __init__.py  harmbench_judge.py  llamaguard.py  metrics.py
src/crucible/finetune/: __init__.py  prepare.py  prepare_multiturn.py  train.py
src/crucible/pair/: __init__.py  attacker.py  orchestrator.py  target.py
src/crucible/utils/: __init__.py  serving.py
