[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sanctum-crucible"
version = "0.1.0"
description = "LLM Red Team Research Framework - Iterative PAIR attack fine-tuning and evaluation"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
